--- a/SimpleTaskSystem/SimpleTaskSystem.EntityFramework/SimpleTaskSystem.EntityFramework.csproj
+++ b/SimpleTaskSystem/SimpleTaskSystem.EntityFramework/SimpleTaskSystem.EntityFramework.csproj
@@ -103,6 +103,10 @@
     <Compile Include="Migrations\201406291022389_InitialCreate.Designer.cs">
       <DependentUpon>201406291022389_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505271531284_InitialCreate1.cs" />
+    <Compile Include="Migrations\201505271531284_InitialCreate1.Designer.cs">
+      <DependentUpon>201505271531284_InitialCreate1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="SimpleTaskSystemDataModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -121,6 +125,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201406291022389_InitialCreate.resx">
       <DependentUpon>201406291022389_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505271531284_InitialCreate1.resx">
+      <DependentUpon>201505271531284_InitialCreate1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
