--- a/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/packages.config
+++ b/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/packages.config
@@ -10,6 +10,7 @@
   <package id="Angular.UI.Utils" version="0.2.3" targetFramework="net451" />
   <package id="angularjs" version="1.3.15" targetFramework="net451" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="bootstrap" version="3.3.4" targetFramework="net451" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="Castle.Core-log4net" version="3.3.3" targetFramework="net451" />
